# vector_quantization

./: .flake8  .gitignore  .pre-commit-config.yaml  .todd_version  LICENSE  README.md  makefile  pyproject.toml  setup.py  setup.sh
configs/ar/: README.md  c2i.py  c2i_gpt2_medium_cfg_imagenet_ddp.py  c2i_gpt2_medium_imagenet_ddp.py  c2i_llama_medium_cfg_imagenet_ddp.py  c2i_llama_medium_imagenet_ddp.py  cfg.py  custom_imports.py  interface.py  model.py  runner.py  x2i.py
configs/cluster/: README.md  clip_8192_imagenet_ddp.py  custom_imports.py  interface.py  model.py  runner.py
configs/cvqvae/: 8192_dd2_aglwg075_imagenet_ddp.py  README.md  custom_imports.py  quantizer.py
configs/datasets/: batch_size.py  batch_size_in_total.py  celeba_hq.py  coco_2014.py  ffhq.py  hq_faces.py  imagenet.py  interface.py  laion_aesthetics.py  sa_med2d_20m.py  satin.py  vanilla.py
configs/decoder/: README.md  interface.py  llamagen.py  vqgan.py  vqkd.py  vqkd_large.py
configs/exps/: llamagen_vqgan_imagenet_ddp-no_refine_layer.py
configs/fid/: interface.py
configs/fsq/: 64000_imagenet_ddp.py  8000_imagenet_ddp.py  README.md  custom_imports.py  interface.py  model.py
configs/ic/: README.md  custom_imports.py  imagenet_ddp.py  interface.py  model.py  runner.py
configs/llamagen/: README.md  ar.py  c2i_medium_imagenet_ddp.py  c2i_medium_vqgan_imagenet_ddp.py  vqgan.py  vqgan_128_imagenet_384_ddp.py  vqgan_128x16_f8_imagenet_ddp.py  vqgan_256_f8_imagenet_ddp.py  vqgan_imagenet_384_ddp.py  vqgan_imagenet_ddp.py  vqgan_stylegan2_imagenet_ddp.py
configs/vq/: distance.py  embedding_dim.py  interface.py  num_embeddings.py
configs/vqgan/: 1024_imagenet_ddp.py  16384_dd2_aglwg075_imagenet_ddp.py  16384_imagenet_ddp.py  8192_dd2_aglwg075_imagenet_ddp.py  8192_imagenet_ddp.py  8192_laion_aesthetics_ddp.py  8192_sa_med2d_20m_ddp.py  8192_satin_ddp.py  8192_stylegan2_imagenet_ddp.py  README.md  custom_imports.py  dd2_aglwg075.py  f8.py  (+3 more)
docs/: data.md  inference.md  installation.md  metrics.md  model_card.md  pretrained_models.md  training.md  validation.md
scripts/: train1.sh  train10.sh  train11.sh  train12.sh  train13.sh  train14.sh  train14_1.sh  train14_2.sh  train14_3.sh  train15.sh  train15_1.sh  train15_2.sh  train15_3.sh  train16.sh  train17.sh  train18.sh  train2.sh  train20.sh  train21.sh  train22.sh  train23.sh  train24.sh  train3.sh  train30.sh  train31.sh  train32.sh  train33.sh  train4.sh  train5.sh  train6.sh  train7.sh  train8.sh  train9.sh  val1.sh  val16.sh  val17.sh  val4.sh  val5.sh
tools/: convert_checkpoints.py  convert_log_to_tensorboard.py  debugpy.sh  fid.py  fidelity.py  model_ema.py  prepare_checkpoints.py  run.sh  tokenize_llamagen.py  visualize_patches.py
vq/: __init__.py  fid.py  registries.py  test.py  train.py  val.py
(+183 files in other folders)
